--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,6 +3,14 @@ nav {
   color: #f8dc6c;
 }
 
-.nav-link {
-  color: #f8dc6c;
+.goldfinch {
+  color:#134a8e
 }
+
+.bluejay {
+  color: #f8dc6c;;
+}
+
+/* .nav-link {
+  color: #f8dc6c;
+} */
