Add flex to nav bar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,10 +1,24 @@
 nav {
   font-family: "Chelsea Market", cursive;
   color: #f8dc6c;
+  display: flex;
+  justify-content: space-between;
+  /* margin: 0px 10px 0px 10px; */
 }
 
+.nav-link:hover {
+  color: white;
+  background-color:#134a8e;
+  border-radius: 5px;
+  margin: 5px 5px 5px 5px;
+}
+
+/* .nav-link{
+  margin-bottom: 0px;
+} */
+
 .goldfinch {
-  color:#134a8e
+  color:#134a8e;
 }
 
 .bluejay {
