--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@ nav {
   color: #f8dc6c;
   display: flex;
   justify-content: space-between;
-  /* margin: 0px 10px 0px 10px; */
+  margin: 0px 10px 0px 10px;
 }
 
 .nav-link:hover {
