--- a/src/components/Bird/Bird.css
+++ b/src/components/Bird/Bird.css
@@ -1,5 +1,18 @@
 .bird-card {
   box-sizing: border-box;
+  border-radius: 2vw;
+  width: 30vw;
+  height: 20vw;
   border: 3px solid black;
-  padding: 10px;
+  position:relative;
+  background:url() 10% 10% no-repeat;
+  background-size:cover;
+  background-clip:content-box
+}
+
+.card-text {
+  position: relative;
+  top: 15vw;
+  color: white;
+  background: black;
 }
