--- a/src/components/ThemeToggle/ThemeToggle.css
+++ b/src/components/ThemeToggle/ThemeToggle.css
@@ -1,4 +1,3 @@
-/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
@@ -6,14 +5,12 @@
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -52,11 +49,16 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.toggle {
+  position: absolute;
+  top: 2vw;
+  right: 1vw;
 }
