--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,10 +7,7 @@ nav {
 }
 
 .nav-link:hover {
-  color: white;
-  background-color:#134a8e; 
-  border-radius: 5px;
-  margin: 5px 5px 5px 5px; 
+  transform: scale(1.1);
 }
 
 .goldfinch {
@@ -20,4 +17,5 @@ nav {
 .bluejay {
   color: #f8dc6c;;
 }
+
 
