--- a/src/components/Bird/Bird.css
+++ b/src/components/Bird/Bird.css
@@ -1,9 +1,7 @@
 .bird-card {
   box-sizing: border-box;
   border-radius: 2vw;
-  width: 30vw;
-  height: 20vw;
-  border: 3px solid black;
+  height: 18vw;
   position:relative;
   background:url() 10% 10% no-repeat;
   background-size:cover;
@@ -13,6 +11,6 @@
 .card-text {
   position: relative;
   top: 15vw;
-  color: white;
-  background: black;
+  color: black;
+  background: white;
 }
