--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,12 +20,12 @@ path:hover {
 
 .goldfinch {
   background: #f8dc6c;
-  color:#134a8e;
+  color: #134a8e;
 }
 
 .bluejay {
   background: #134a8e;
-  color:#f8dc6c;
+  color: #f8dc6c;
 }
 
 .App-header-bluejay {
@@ -38,4 +38,8 @@ path:hover {
 
 .burb-logo {
   height: 13vh;
+}
+
+.hidden {
+  display: none;
 }
