--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,6 +14,11 @@ header {
   height: ;
 }
 
+.us-state-map {
+  height: 38vw;
+  padding-top: 1vw;
+}
+
 path {
   pointer-events: all;
   fill: white;
