--- a/src/components/StatePicker/StatePicker.css
+++ b/src/components/StatePicker/StatePicker.css
@@ -1,5 +1,5 @@
 .us-state-map {
-  height: 37vw;
+  height: 39vw;
   width: 100vw;
   padding-top: 2vw;
 }
@@ -11,3 +11,15 @@ path:hover {
   opacity: 0.5;
   cursor: pointer;
 }
+
+@media screen and (max-width: 620px) and (orientation: portrait) {
+ .us-state-map {
+   height: 100%;
+ }
+}
+
+@media screen and (min-width: 620px) and (max-width:950px) {
+  .us-state-map {
+    height: 100%;
+  }
+ }
