--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 .burb-logo {
-  height: 10vh;
+  height: 8vh;
 }
 
 .hidden {
@@ -49,4 +49,10 @@ h1 {
     top: 100%;
     left: 0;
   }
+}
+
+@media screen and (max-width: 1000px) {
+.burb-logo {
+  height: 5vw;
+}
 }
