--- a/src/components/Bird/Bird.css
+++ b/src/components/Bird/Bird.css
@@ -34,3 +34,18 @@ h3 {
   background: #134a8e;
   color: #f8dc6c;
 }
+
+@media screen and (max-width: 620px) and (orientation: portrait) {
+  .bird-card {
+    height: 35vw;
+  }
+
+  .card-text {
+    bottom: -28vw;
+  }
+
+  h3 {
+    margin: 0;
+    font-size: 55%;
+  }
+}
